--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.10.1"
+    "sweetalert2": "^11.10.1",
+    "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
